--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -1,6 +1,7 @@
 
 // Font Family
-$base-font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+// $base-font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+$base-font-family: Arial, "Lucida Grande", sans-serif; 
 $header-font-medium: "Copernicus-Medium";
 $header-font-family: "Copernicus-Semibold";
 $header-font-bold: "Copernicus-Bold";
