--- a/src/scss/components/_section_styles.scss
+++ b/src/scss/components/_section_styles.scss
@@ -25,6 +25,10 @@ section {
 	left: 0;
 	right: 0;
 	text-align: center;
+	h4 {
+		font-size: 12px;
+		font-weight: 700;
+	}
 	.circle {
 		margin: 0 auto;
 		box-sizing: border-box;
