--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,6 +31,7 @@
 @import 'components/_property_nav.scss';
 @import 'components/_property_individual.scss';
 @import 'components/_green_specs.scss';
+@import 'components/_slick_overides.scss';
 
 // modules
 @import 'modules/_hero.scss';
