--- a/statamic/_themes/main/partials/nav.html
+++ b/statamic/_themes/main/partials/nav.html
@@ -19,6 +19,7 @@
         {{ endif }}
         {{ endif }}
         {{ /nav }}
+        <li><a class="btn-contact" href="">Contact</a></li>
       </li>
     </ul>
   </nav>
