--- a/statamic/_themes/main/templates/property_individual.html
+++ b/statamic/_themes/main/templates/property_individual.html
@@ -82,7 +82,7 @@
 							
 								{{ photo_carousel }}
 								<div>
-								<img src="{{ path src="{{ image }}"}}">
+								<img src="{{ path src="{{ value }}"}}">
 								</div>
 								{{ /photo_carousel}}
 							
