--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,16 +1,16 @@
 header {
-	margin-bottom: 0;
 	border-radius: 0;
 	padding-top: 4px;
 	padding-bottom: 2px;
 	background-color: #fff;
 	position: fixed;
-	height: 76px;
+	height: 78px;
 	background-color: #fff;
 	z-index: 1000;
+	border-bottom: 1px solid #25282A;
 	&.nav-down {
 		background-color: rgba(white,.98);
-		border-bottom: 1px solid darken(white,7%);
+		
 	}
 	width: 100%;
 	position: relative;
@@ -58,6 +58,7 @@ nav {
 		color: $dark-gray;
 		display: block;
 		padding: 23px 15px;
+		font-size: 13px;
 		.left {
 			padding: 0;
 		}
