--- a/statamic/_themes/main/partials/property_tile.html
+++ b/statamic/_themes/main/partials/property_tile.html
@@ -8,12 +8,14 @@
 		<div class='preview-image' style='background-image: url( {{ path src='{{ preview_image }}' }} );'></div>
 		<div class="property_tile_info">
 			<div class="top-info">
-				<h3>{{ title }}</h3>
-				{{ slug }}
+				<h2>{{ title }}</h2>
 				<div class="spacer"></div>
-				<h4>${{ price|format_number }}</h4>
+				<h3>${{ price|format_number }}</h3>
 				<div class="spacer"></div>
 				<h4>{{ property_type }}</h4>
+				{{ if sqft|not_empty }}
+				<h4>{{ sqft|format_number }} ft<sup>2</sup></h4>
+				{{ endif }}
 				<div class="spacer"></div>
 				<h4>{{ property_location }}</h4>
 			</div>
