--- a/statamic/_themes/main/templates/properties.html
+++ b/statamic/_themes/main/templates/properties.html
@@ -1,2 +1,2 @@
-<div id="properties" class="content-wrap background-gray"></div>
+<div id="properties" class="content-wrap leading background-gray"></div>
 
