added number formatting to square feet on properties page

--- a/src/scss/modules/_property_tiles.scss
+++ b/src/scss/modules/_property_tiles.scss
@@ -20,6 +20,9 @@
 		background-color: $light-gray;
 		background-size: cover;
 	}
+	.sqft {
+		margin-right: 5px;
+	}
 	img {
 		max-height: 300px;
 		max-width: 200px;
