--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,7 @@
 
 // @import url("http://fonts.googleapis.com/css?family=Nunito:400,300,700");
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
-// @import '../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap_custom.scss';
+@import '../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap_custom.scss';
 @import '../../bower_components/normalize.css/normalize';
 @import '../../bower_components/susy/sass/susy';
 @import '../../bower_components/breakpoint-sass/stylesheets/breakpoint';
