--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -61,6 +61,7 @@
 			</div>
 		</div>
 	</section>
+	{{ theme:partial src="modal_contact" }}
 	<section class="light-gray-bg" id="featured-properties">
 		<div class="circle-leader">
 			<div class="circle light-gray-bg">
