--- a/src/scss/components/_slick_overides.scss
+++ b/src/scss/components/_slick_overides.scss
@@ -2,6 +2,11 @@ $slick-opacity-on-hover: 1;
 $slick-opacity-not-active: .25;
 
 
+.slick-prev,
+.slick-next {
+    margin-top: -22px;
+}
+
 .slick-prev:before
 {
     display: inline-block;
@@ -16,8 +21,6 @@ $slick-opacity-not-active: .25;
     transform: rotate(180deg);
     margin-right: -30px;
 }
-
-
 
 .property-carousel {
 
