--- a/statamic/_themes/main/layouts/default.html
+++ b/statamic/_themes/main/layouts/default.html
@@ -20,6 +20,7 @@
     {{ theme:partial src="footer" }}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.min.js"></script> -->
+  <script src="{{ theme:js src="bootstrap"}}"></script>
   <!-- build:js -->
   <script src="{{ theme:js }}"></script>
   <!-- endbuild -->
