--- a/statamic/_themes/main/partials/nav.html
+++ b/statamic/_themes/main/partials/nav.html
@@ -19,7 +19,7 @@
         {{ endif }}
         {{ endif }}
         {{ /nav }}
-        <li><a class="btn-contact" href="">Contact</a></li>
+        <li><a data-toggle="modal" data-target="#contact-modal" class="btn-contact" href="">Contact</a></li>
       </li>
     </ul>
   </nav>
