--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -4592,7 +4592,7 @@ section {
   background-color: #F7F7F7; }
 
 .property-carousel img {
-  height: 700px;
+  max-height: 700px;
   text-align: center;
   margin: auto; }
 
