--- a/statamic/_themes/main/partials/modal_contact.html
+++ b/statamic/_themes/main/partials/modal_contact.html
@@ -1,21 +1,24 @@
-<!-- <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Launch demo modal
-</button>
- -->
-<!-- Modal -->
 <div class="modal fade" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        {{ theme:partial src="svg/home_valuation" }}
       </div>
       <div class="modal-body">
-        ...
+        <h2>More Than Mere Numbers</h2>
+        <h3>Get in touch to make a more informed decision about your property with a Garfield Valuation</h3>
+        <form>
+          <input placeholder="First Name" type="text">
+          <input placeholder="Last Name" type="text">
+          <input placeholder="Mobile Number" type="text">
+          <input placeholder="Office Number" type="text">
+          <input placeholder="Email Address" type="text">
+          <input placeholder="Preferred Contact Time" type="text">
+        </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn-garfield" data-dismiss="modal">SEND</button>
       </div>
     </div>
   </div>
