--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -19,6 +19,10 @@ html, body, a, span, p {
   font-family: $base-font-family;
 }
 
+.slick-list *:focus {
+  outline: none;
+}
+
 ul {
   -webkit-margin-before: 0;
   -webkit-margin-after: 0;
