--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -60,6 +60,8 @@ $background-light-gray: #F7F7F7;
 $header-font-color: #25282A;
 $light-font-color: #A7A4A4;
 $insights: #F4FBF9;
+$red: #FF0000;
+$modal-text: #CCCCCC;
 
 
 // fonts
