--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -60,11 +60,17 @@ nav {
 		.left {
 			padding: 0;
 		}
+		&:focus {
+			outline: none;
+		}
 	}
 }
 
-nav li a:hover, nav li a:focus, nav li a.active {
+nav li a:hover, nav li a:focus, nav li a.current {
 	background-color: transparent;
 	color: $green;
 	box-shadow: 0px 3px 0px 0px;
+	&.muted, &.btn-contact {
+		box-shadow: 0px 0px 0px 0px;
+	}
 }
