--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,6 +36,8 @@
 // modules
 @import 'modules/_hero.scss';
 @import 'modules/_buttons.scss';
+@import 'modules/_forms.scss';
+@import 'modules/_modals.scss';
 @import 'modules/_circle.scss';
 @import 'modules/_property_tiles.scss';
 @import 'modules/_insight_tile.scss';
