--- a/src/scss/modules/_hero.scss
+++ b/src/scss/modules/_hero.scss
@@ -13,16 +13,17 @@
 	}
 	h1 {
 		margin-top: 0;
+		margin-bottom: 15px;
 	}
 	h3 {
 		font-family: $header-font-medium;
 		font-size: 22px;
 		line-height: 32px;
-		@include span (3 of 12);
-
+		@include span (4 of 12);
+		margin-top: 0;
+		margin-bottom: 15px;
 	}
 	a {
 		@include btn-garfield(10px, 50px, 18px);
-		margin-top: 36px;
-	}
+		margin-top: 15px	}
 }
