--- a/statamic/_themes/main/partials/footer.html
+++ b/statamic/_themes/main/partials/footer.html
@@ -2,6 +2,10 @@
 	<div class="container">
 			<div class="grid-3">
 				<h3>SIGN UP FOR EMAIL UPDATES</h3>
+				<form class="email-signup">
+					<input type="text" placeholder="type email address"></input>
+					<button type="submit">Submit</button>
+				</form>
 			</div>
 			<div class="grid-3">
 				<h3>VISIT US</h3>
